--- a/cluster/apps/mb-scheduler/ks.yaml
+++ b/cluster/apps/mb-scheduler/ks.yaml
@@ -13,3 +13,15 @@ spec:
   sourceRef:
     kind: GitRepository
     name: flux-system
+  # Copy / Pasting this here since patch didn't work
+  decryption:
+    provider: sops
+    secretRef:
+      name: sops-gpg
+  postBuild:
+    substitute: { }
+    substituteFrom:
+      #      - kind: ConfigMap
+      #        name: cluster-settings
+      - kind: Secret
+        name: cluster-secrets
