wip(mb-scheduler): suspend kustomization

--- a/cluster/apps/mb-scheduler/ks.yaml
+++ b/cluster/apps/mb-scheduler/ks.yaml
@@ -4,8 +4,9 @@ metadata:
   name: mb-scheduler
   namespace: flux-system
 spec:
+  # Turn this on to enable this entire namespace
   suspend: false
-  interval: 30m
+  interval: 10m
   retryInterval: 1m
   timeout: 5m
   prune: true
