--- a/cluster/apps/default/flood/flood-helm-release.yaml
+++ b/cluster/apps/default/flood/flood-helm-release.yaml
@@ -21,7 +21,7 @@ spec:
   values:
     image:
       repository: jesec/flood
-      tag: 4.7.0
+      tag: master
 
     env:
       - name: FLOOD_OPTION_AUTH
