--- a/cluster/apps/mb-scheduler/ks.yaml
+++ b/cluster/apps/mb-scheduler/ks.yaml
@@ -5,7 +5,7 @@ metadata:
   namespace: flux-system
 spec:
   # Turn this on to enable this entire namespace
-  suspend: true
+  suspend: false
   interval: 10m
   retryInterval: 1m
   timeout: 5m
