chore(prometheus): disable prometheus from being scheduled on arm nodes

--- a/cluster/apps/monitoring/kube-prometheus-stack/kube-prometheus-stack-release.yaml
+++ b/cluster/apps/monitoring/kube-prometheus-stack/kube-prometheus-stack-release.yaml
@@ -222,6 +222,15 @@ spec:
               resources:
                 requests:
                   storage: 25Gi
+        affinity:
+         nodeAffinity:
+           requiredDuringSchedulingIgnoredDuringExecution:
+             nodeSelectorTerms:
+              - matchExpressions:
+                - key: kubernetes.io/arch
+                  operator: NotIn
+                  values:
+                    - arm64
         resources:
           requests:
             cpu: 444m
