fix(longhorn): fix pods not being rescheduled if node goes down

--- a/cluster/apps/longhorn-system/longhorn/longhorn-helm-release.yaml
+++ b/cluster/apps/longhorn-system/longhorn/longhorn-helm-release.yaml
@@ -45,6 +45,9 @@ spec:
       defaultReplicaCount: 2
       defaultDataLocality: best-effort
       replicaAutoBalance: best-effort
+      # Prevents pods from being rescheduled on healthy nodes
+      nodeDownPodDeletionPolicy: delete-both-statefulset-and-deployment-pod
+      nodeDrainPolicy: block-if-contains-last-replica
     ingress:
       enabled: true
       host: "longhorn.${SECRET_DOMAIN}"
