--- a/cluster/apps/monitoring/ntfy-alertmanager/deployment.yaml
+++ b/cluster/apps/monitoring/ntfy-alertmanager/deployment.yaml
@@ -37,12 +37,12 @@ spec:
             - name: config
               mountPath: "/etc/ntfy-alertmanager"
               readOnly: true
-#          resources:
-#            requests:
-#              cpu: 10m
-#              memory: 100Mi
-#            limits:
-#              memory: 100Mi
+          resources:
+            requests:
+              cpu: 5m
+              memory: 50Mi
+            limits:
+              memory: 50Mi
       affinity:
         nodeAffinity:
           requiredDuringSchedulingIgnoredDuringExecution:
