--- a/cluster/apps/default/readarr/readarr-helm-release.yaml
+++ b/cluster/apps/default/readarr/readarr-helm-release.yaml
@@ -40,7 +40,7 @@ spec:
         containers:
           main:
             image:
-              repository: ghcr.io/onedr0p/readarr-develop:0.3.14.2358
+              repository: ghcr.io/onedr0p/readarr-develop
               tag: 0.3.14.2358
               pullPolicy: IfNotPresent
             env:
