fix(actual-budget-sms-proxy): adjust secrets

--- a/cluster/apps/default/actual-budget/sms-proxy/secrets.enc.yaml
+++ b/cluster/apps/default/actual-budget/sms-proxy/secrets.enc.yaml
@@ -4,35 +4,35 @@ metadata:
     name: actual-budget-sms-proxy-secrets
     namespace: default
 stringData:
-    API_KEY: ENC[AES256_GCM,data:3lG0lxILvzXWraNdQC1+oWdpph6eRtb5EcFLEaAB,iv:cDVahf3wLThxMX23I9hKUAjUPKw82dYBQF5PcHwNAtc=,tag:wHpnPihBbfKTqb0Dckj+mQ==,type:str]
-    ACTUAL_SERVER_PASSWORD: ENC[AES256_GCM,data:tzjENqn/5ScfdOgTWIHa0bzMCBj3HyNYw6x+Issi,iv:6GDLeioG95BREcuAcbzIZ75VFxVb3qckG/0eecOz8Ws=,tag:MukIKRGbTJDlWDAbWgkVtQ==,type:str]
-    ACTUAL_SERVER_BUDGET_ID: ENC[AES256_GCM,data:hPa0GzN16wrDbAAFcqxEIu5EuE/3Wd9gZoN5uKsRo8tBbWbt,iv:K8Ftbv+S/muAlSqEQVc148TYTpb2bH11gPwmvD/WwBs=,tag:shMbhs5s+XmY2ZRTjpda2Q==,type:str]
+    API_KEY: ENC[AES256_GCM,data:wqY+6wPQdLRh0BOf/VRigODAuCL07yOEyYKcwBMW,iv:/1sr3Pw5ZdsC0bsR53rssi9p6lLHznx88oquugpbzJ4=,tag:cGIZz3xwgAlDOPDU1hhdPQ==,type:str]
+    ACTUAL_SERVER_PASSWORD: ENC[AES256_GCM,data:HuF+5wofSfBIAf4a+pu8X+KqMrbKTqRt1M+pIYIY,iv:i4I7OlTIRezdPav6gauuaxKWfRk8ZuTIGqVipxg8ZEU=,tag:CiIWGpupPVUKJpw6SNjBZQ==,type:str]
+    ACTUAL_SERVER_BUDGET_ID: ENC[AES256_GCM,data:y7Ip9U0WxFqR9dJU1Ym4YI31pcKm5dRAfyTWvyV1ezz1vssR,iv:TsPIzoZZDijZhvHwMUm3C7cY5cLGOtiikVFjrtDnv0E=,tag:kIQzxPYHbl7dUr5IUvlBzg==,type:str]
 sops:
     kms: []
     gcp_kms: []
     azure_kv: []
     hc_vault: []
     age: []
-    lastmodified: "2023-10-14T12:54:17Z"
-    mac: ENC[AES256_GCM,data:lReRNVjHF166upccR7EF/FFMh+VxIemt4rKWNuuy94dJE/SbeoSlyYwz/Uko3239Blmgksk1MUeuAugHZKZ3EGhsyZrslpkE1VqdxbFhH4/XhfwrTrR3h61ptX3efay0MUmGrRDtx3FBSSrrWt4/4yEM9ZtUYM2eI+gqF3SGcOA=,iv:lv4Aph6QFEuHq4KvymNe+CjQSmAb8xEtN8f75n7WdA8=,tag:Mz654MslBdCoGEWcqtoGqw==,type:str]
+    lastmodified: "2024-01-17T21:35:13Z"
+    mac: ENC[AES256_GCM,data:IBAWZBFM9oEi4F+BjN0gcgjtG9hqmlWxWOPic2MAoKLAmLBw5AOLJB15yLWbmzhM85mTzXYJam80kB1yUmvPBQMVUxy8jRyh3pDNqG1H4eChD5aIaqt1oQr9sgfG3vZmM9cAuQkvNaA6n8E1OYWMB9BlgYiEXgFo5TomT0ibutc=,iv:qpLLXejMAZeABPzzL17NkxuNuj+GPIt6FYed6Ia6VBg=,tag:YfS72ihn3GfTGjS++CcdGQ==,type:str]
     pgp:
-        - created_at: "2023-10-14T12:54:17Z"
+        - created_at: "2024-01-17T21:35:13Z"
           enc: |-
             -----BEGIN PGP MESSAGE-----
 
-            hQGMA71EESEn7N2iAQwAmGjRkn+cu1Z2SJx+1+Ve36lSx8gRyB9jCzeLoZTM70gM
-            3kfc9f6JuLPIWpMQvWTakL5z4c+96hyZUyFc0zLIzn12ZkwnYu/Ex6vxp/hEKJYt
-            ZVo0qkhyjsxZIrO1bfvzTmZNw0UbFK6+Ux6/xlZuxazKKVRz/8dbQ7wauxc3TJq6
-            SNcA8Cbff+EvCSqX6t3kabCOMflX6OwG82qOqKX9mTFdslYe7c6iWyzQQCmT4H7r
-            41K/PRxuUEznT12PZA04sL66uc5Y/ukA81DOSxDdqh2nlX4LyQQ+u/2gf8QtD5eL
-            X75GY4BUhKIHNl5WAJkxcj08yVfPqLG4Mw3MjutXk//u/FxXxYBIulsY0EW4sFwS
-            vLQTvG0OgdrxVx+9mtvMKQ7A9dkBw3tqWqreRh/nbsYrbVzxIPdpE6SVzBb1RkoU
-            fP3pX6pALF58XNb4Lm6Tw2f+A2XzNFdcZZCMRNFShMCZgSQMnQ4+NvsmGY8mcTlj
-            0OVdeJBu2Fvu7d//lyVA0l4BnZdh35GxGSkdaWSDszugMu9syYTZ9QtTHKFM2aLf
-            cY8VR9PgEsvi6bKSK1gEF5g/lkJfsNBg/FZ7Y+VmWUBrPV7KzdnBBZdrsXRISSk3
-            gH5X/Ii1FYYMEeCp08yw
-            =Ah0i
+            hQGMA71EESEn7N2iAQv/YQWz3teOeZdQmNjkp4qfwb5sQohxdbw57aPK6jODksI7
+            0g+2tRtppLRHtlRuTDmblKCzRgjNi5Ozq7COc/BZ6L2WB+ewqKsaHem7kFY/boyQ
+            P/TlCe/CAv/fyR/BiQSJZw76M/73cp+M38QqMUF2nqilVVkI8qPfNehm47f7Lbb/
+            LSOdWuXy4spUxLG/jmVgOj1gUKh24DG39Q/eIY8sscmUL50wsVsfajW9zf9Z9fbu
+            IGCsjkBVrLTQMNkVan1fcJw2ha8uYUL3NfqbOXJkpbURP09I9BoPZlMo+cyy07Ox
+            e85RVo3Nu9hrd79R+kC6ZeOa0FyBRTAYbn/IU3qqIkLncfYBZa4jAm28LzpNCg6i
+            wQKmuAzEdwENerZBXbolF263Ka7EEpvuLJi/EcEsveQ/gr2wz56fa4l5iNC1JPFT
+            FQZbVYjgm0Xylfx1eE/EmQ1NRewC8U1fRgnEMPC4ZhfBMQ5tfmWvOG2Tjrl9ya+r
+            026/AmFguTvsGUqfq1rh0lEB9XJeuCWEI9qAwo2NL3gs104DELqU69+Yao0GEmK+
+            N1v7d5byGjLS4f+3Zwn5zQgQjZ5iXNFoVVFhsd8NhoUQiZrgMSOdPkQmrDr4TWX5
+            S0o=
+            =LfXL
             -----END PGP MESSAGE-----
           fp: 2D47B9C25AAD87860CC1778F7022B8F414F4AEED
     encrypted_regex: ^(data|stringData)$
-    version: 3.8.0
+    version: 3.8.1
