--- a/cluster/apps/kube-system/kured/kured-helmrelease.yaml
+++ b/cluster/apps/kube-system/kured/kured-helmrelease.yaml
@@ -1,58 +1,58 @@
----
-apiVersion: helm.toolkit.fluxcd.io/v2beta2
-kind: HelmRelease
-metadata:
-  name: kured
-  namespace: kube-system
-spec:
-  interval: 5m
-  chart:
-    spec:
-      # renovate: registryUrl=https://kubereboot.github.io/charts
-      chart: kured
-      version: 5.3.2
-      sourceRef:
-        kind: HelmRepository
-        name: kubereboot-charts
-        namespace: flux-system
-      interval: 10m
-  install:
-    timeout: 10m
-    replace: true
-    crds: CreateReplace
-    remediation:
-      retries: 3
-  upgrade:
-    remediation:
-      remediateLastFailure: true
-      retries: 3
-      strategy: rollback
-    cleanupOnFail: true
-    crds: CreateReplace
-  test:
-    enable: true
-  rollback:
-    recreate: true
-    force: true
-    cleanupOnFail: true
-  uninstall:
-    keepHistory: false
-  maxHistory: 3
-  values:
-    configuration:
-      startTime: "2:00"
-      endTime: "6:00"
-      timeZone: "Africa/Cairo"
-      rebootDays:
-        - fr
-        - sa
-      rebootCommand: "/usr/bin/systemctl reboot"
-    metrics:
-      create: true
-    service:
-      create: true
-  valuesFrom:
-    - targetPath: configuration.notifyUrl
-      kind: Secret
-      name: kured-secret
-      valuesKey: NOTIFY_URL
+#---
+#apiVersion: helm.toolkit.fluxcd.io/v2beta2
+#kind: HelmRelease
+#metadata:
+#  name: kured
+#  namespace: kube-system
+#spec:
+#  interval: 5m
+#  chart:
+#    spec:
+#      # renovate: registryUrl=https://kubereboot.github.io/charts
+#      chart: kured
+#      version: 5.3.2
+#      sourceRef:
+#        kind: HelmRepository
+#        name: kubereboot-charts
+#        namespace: flux-system
+#      interval: 10m
+#  install:
+#    timeout: 10m
+#    replace: true
+#    crds: CreateReplace
+#    remediation:
+#      retries: 3
+#  upgrade:
+#    remediation:
+#      remediateLastFailure: true
+#      retries: 3
+#      strategy: rollback
+#    cleanupOnFail: true
+#    crds: CreateReplace
+#  test:
+#    enable: true
+#  rollback:
+#    recreate: true
+#    force: true
+#    cleanupOnFail: true
+#  uninstall:
+#    keepHistory: false
+#  maxHistory: 3
+#  values:
+#    configuration:
+#      startTime: "2:00"
+#      endTime: "6:00"
+#      timeZone: "Africa/Cairo"
+#      rebootDays:
+#        - fr
+#        - sa
+#      rebootCommand: "/usr/bin/systemctl reboot"
+#    metrics:
+#      create: true
+#    service:
+#      create: true
+#  valuesFrom:
+#    - targetPath: configuration.notifyUrl
+#      kind: Secret
+#      name: kured-secret
+#      valuesKey: NOTIFY_URL
