chore(wstunnel): attempt at making wstunnel to work

--- a/cluster/apps/vpn/wstunnel/deployment.yaml
+++ b/cluster/apps/vpn/wstunnel/deployment.yaml
@@ -20,20 +20,20 @@ spec:
     spec:
       containers:
         - name: wstunnel
-          image: shadyf/wstunnel:latest
+          image: ghcr.io/erebe/wstunnel:v9.2.2
           imagePullPolicy: IfNotPresent
           command: [ '/wstunnel' ]
-          args: [ "-v", "--server", "ws://0.0.0.0:48513", "-r", "wg-svc:51820" ]
+          args: [ "server", "--restrict-to", "wg-svc:51820", "ws://[::]:48513" ]
           ports:
             - containerPort: 48513
       imagePullSecrets:
         - name: regcred
-      affinity:
-        nodeAffinity:
-          requiredDuringSchedulingIgnoredDuringExecution:
-            nodeSelectorTerms:
-              - matchExpressions:
-                  - key: beta.kubernetes.io/arch
-                    operator: In
-                    values:
-                      - arm64
+#      affinity:
+#        nodeAffinity:
+#          requiredDuringSchedulingIgnoredDuringExecution:
+#            nodeSelectorTerms:
+#              - matchExpressions:
+#                  - key: beta.kubernetes.io/arch
+#                    operator: In
+#                    values:
+#                      - arm64
