--- a/cluster/apps/monitoring/grafana/grafana-helm-release.yaml
+++ b/cluster/apps/monitoring/grafana/grafana-helm-release.yaml
@@ -149,6 +149,11 @@ spec:
         cert-manager:
           url: https://raw.githubusercontent.com/monitoring-mixins/website/master/assets/cert-manager/dashboards/cert-manager.json
           datasource: Prometheus
+        flaresolverr:
+          # renovate: depName="FlareSolverr"
+          gnetId: 19363
+          revision: 1
+          datasource: Prometheus
 
       grafana-dashboards-kubernetes:
         k8s-system-api-server:
