--- a/cluster/base/flux-system-extras/helm-chart-repositories/open-8gears-charts.yaml
+++ b/cluster/base/flux-system-extras/helm-chart-repositories/open-8gears-charts.yaml
@@ -6,5 +6,5 @@ metadata:
   namespace: flux-system
 spec:
   interval: 30m
-  url: https://8gears.container-registry.com/chartrepo/library
+  url: oci://8gears.container-registry.com/library/n8n
   timeout: 3m
