--- a/cluster/apps/default/flaresolverr/flaresolverr-helm-release.yaml
+++ b/cluster/apps/default/flaresolverr/flaresolverr-helm-release.yaml
@@ -36,6 +36,7 @@ spec:
               pullPolicy: IfNotPresent
             env:
               TZ: Africa/Cairo
+              LOG_LEVEL: debug
               PROMETHEUS_ENABLED: true
             probes:
               liveness: &probes
