chore(prowlarr): add application_url

--- a/cluster/apps/default/prowlarr/prowlarr-helm-release.yaml
+++ b/cluster/apps/default/prowlarr/prowlarr-helm-release.yaml
@@ -33,7 +33,7 @@ spec:
       TZ: "Africa/Cairo"
       # Needed so that flaresolverr can be added without any issues
       # Update: not URL_BASE. Should be application URL but opted to just ignore this since it can be circumvented
-      # PROWLARR__URL_BASE: prowlarr.default.svc.cluster.local
+      PROWLARR__APPLICATION_URL: http://prowlarr.default.svc.cluster.local:9696
     ingress:
       main:
         enabled: true
