--- a/cluster/base/flux-system-extras/oci-repositories/open-8gears-charts.yaml
+++ b/cluster/base/flux-system-extras/oci-repositories/open-8gears-charts.yaml
@@ -1,4 +1,3 @@
-# https://artifacthub.io/packages/helm/oauth2-proxy/oauth2-proxy
 apiVersion: source.toolkit.fluxcd.io/v1beta2
 kind: HelmRepository
 metadata:
@@ -6,5 +5,6 @@ metadata:
   namespace: flux-system
 spec:
   interval: 30m
+  type: oci
   url: oci://8gears.container-registry.com/library/n8n
   timeout: 3m
