--- a/cluster/base/flux-system-extras/oci-repositories/open-8gears-charts.yaml
+++ b/cluster/base/flux-system-extras/oci-repositories/open-8gears-charts.yaml
@@ -7,5 +7,5 @@ metadata:
 spec:
   interval: 30m
   type: oci
-  url: oci://8gears.container-registry.com/library
+  url: oci://8gears.container-registry.com
   timeout: 3m
