fix(paperless): allow import of PDFs with digital signatures

--- a/cluster/apps/default/paperless/paperless-helm-release.yaml
+++ b/cluster/apps/default/paperless/paperless-helm-release.yaml
@@ -39,6 +39,7 @@ spec:
       PAPERLESS_TASK_WORKERS: 1
       PAPERLESS_TIME_ZONE: "Africa/Cairo"
       PAPERLESS_URL: "https://paperless.${SECRET_DOMAIN}"
+      PAPERLESS_OCR_USER_ARGS: '{"invalidate_digital_signatures": true}'
       USERMAP_UID: 1002
       USERMAP_GID: 1002
 
