--- a/cluster/apps/default/mealie/mealie-helm-release.yaml
+++ b/cluster/apps/default/mealie/mealie-helm-release.yaml
@@ -1,3 +1,4 @@
+# yaml-language-server: $schema=https://raw.githubusercontent.com/bjw-s/helm-charts/app-template-3.0.2/charts/other/app-template/schemas/helmrelease-helm-v2beta2.schema.json
 apiVersion: helm.toolkit.fluxcd.io/v2beta2
 kind: HelmRelease
 metadata:
@@ -57,6 +58,7 @@ spec:
 
     service:
       main:
+        controller: main
         ports:
           http:
             port: 9000
@@ -76,7 +78,7 @@ spec:
               - path: /
                 pathType: Prefix
                 service:
-                  name: main
+                  identifier: main
                   port: http
         tls:
           - hosts:
