--- a/cluster/apps/default/paperless/redis-helm-release.yaml
+++ b/cluster/apps/default/paperless/redis-helm-release.yaml
@@ -1,3 +1,4 @@
+# yaml-language-server: $schema=https://raw.githubusercontent.com/bjw-s/helm-charts/app-template-3.0.2/charts/other/app-template/schemas/helmrelease-helm-v2beta2.schema.json
 apiVersion: helm.toolkit.fluxcd.io/v2beta2
 kind: HelmRelease
 metadata:
@@ -7,8 +8,9 @@ spec:
   interval: 15m
   chart:
     spec:
+      # renovate: registryUrl=https://bjw-s.github.io/helm-charts/
       chart: app-template
-      version: 0.2.1
+      version: 3.0.2
       interval: 15m
       sourceRef:
         kind: HelmRepository
@@ -22,9 +24,11 @@ spec:
 
     service:
       main:
+        controller: main
         ports:
           http:
             enabled: false
+            port: 8080 # Not really the port but just want schema validation to pass
           redis:
             enabled: true
             port: 6379
