--- a/cluster/apps/default/paperless/paperless-helm-release.yaml
+++ b/cluster/apps/default/paperless/paperless-helm-release.yaml
@@ -51,7 +51,7 @@ spec:
 
     service:
       main:
-        controller: paperless-ngx
+        controller: main
         ports:
           http:
             port: 8000
