fix(paperless): fix helm chart not reconciling due to wrong service controller name

--- a/cluster/apps/default/paperless/paperless-helm-release.yaml
+++ b/cluster/apps/default/paperless/paperless-helm-release.yaml
@@ -51,7 +51,7 @@ spec:
 
     service:
       main:
-        controller: main
+        controller: paperless
         ports:
           http:
             port: 8000
@@ -71,7 +71,7 @@ spec:
               - path: /
                 pathType: Prefix
                 service:
-                  identifier: main
+                  identifier: paperless
                   port: http
         tls:
           - hosts:
