chore(flaresolverr): attempt at fixing app-template chart not working

--- a/cluster/apps/default/flaresolverr/flaresolverr-helm-release.yaml
+++ b/cluster/apps/default/flaresolverr/flaresolverr-helm-release.yaml
@@ -46,7 +46,7 @@ spec:
                 spec:
                   httpGet:
                     path: /health
-                    port: &port "8191"
+                    port: &port 8191
                   initialDelaySeconds: 0
                   periodSeconds: 10
                   timeoutSeconds: 1
