--- a/cluster/apps/default/sonarr/sonarr-helm-release.yaml
+++ b/cluster/apps/default/sonarr/sonarr-helm-release.yaml
@@ -55,7 +55,7 @@ spec:
                 spec:
                   httpGet:
                     path: /ping
-                    port: &port "8989"
+                    port: &port 8989
                   initialDelaySeconds: 0
                   periodSeconds: 10
                   timeoutSeconds: 1
