--- a/cluster/apps/default/paperless/paperless-helm-release.yaml
+++ b/cluster/apps/default/paperless/paperless-helm-release.yaml
@@ -24,33 +24,44 @@ spec:
     remediation:
       retries: 3
   values:
-    image:
-      repository: ghcr.io/paperless-ngx/paperless-ngx
-      tag: 2.6.2
+    controllers:
+      paperless:
+        containers:
+          app:
+            image:
+              repository: ghcr.io/paperless-ngx/paperless-ngx
+              tag: 2.6.2
 
-    env:
-      COMPOSE_PROJECT_NAME: paperless
-      PAPERLESS_CONSUMER_POLLING: "60"
-      PAPERLESS_CONSUMER_RECURSIVE: "true"
-      PAPERLESS_CONSUMER_SUBDIRS_AS_TAGS: "true"
-      PAPERLESS_ENABLE_HTTP_REMOTE_USER: "false"
-      PAPERLESS_OCR_LANGUAGE: eng+ara
-      PAPERLESS_OCR_LANGUAGES: eng ara
-      PAPERLESS_PORT: 8000
-      PAPERLESS_REDIS: redis://paperless-redis.default.svc.cluster.local:6379
-      PAPERLESS_TASK_WORKERS: 1
-      PAPERLESS_TIME_ZONE: "Africa/Cairo"
-      PAPERLESS_URL: "https://paperless.${SECRET_DOMAIN}"
-      PAPERLESS_OCR_USER_ARGS: '{"invalidate_digital_signatures": true}'
-      USERMAP_UID: 1002
-      USERMAP_GID: 1002
+            env:
+              COMPOSE_PROJECT_NAME: paperless
+              PAPERLESS_CONSUMER_POLLING: "60"
+              PAPERLESS_CONSUMER_RECURSIVE: "true"
+              PAPERLESS_CONSUMER_SUBDIRS_AS_TAGS: "true"
+              PAPERLESS_ENABLE_HTTP_REMOTE_USER: "false"
+              PAPERLESS_OCR_LANGUAGE: eng+ara
+              PAPERLESS_OCR_LANGUAGES: eng ara
+              PAPERLESS_PORT: 8000
+              PAPERLESS_REDIS: redis://paperless-redis.default.svc.cluster.local:6379
+              PAPERLESS_TASK_WORKERS: 1
+              PAPERLESS_TIME_ZONE: "Africa/Cairo"
+              PAPERLESS_URL: "https://paperless.${SECRET_DOMAIN}"
+              PAPERLESS_OCR_USER_ARGS: '{"invalidate_digital_signatures": true}'
+              USERMAP_UID: 1002
+              USERMAP_GID: 1002
 
-    envFrom:
-      - secretRef:
-          name: paperless-secrets
+            envFrom:
+              - secretRef:
+                  name: paperless-secrets
+
+            resources:
+              requests:
+                cpu: 10m
+                memory: 1200Mi
+              limits:
+                memory: 1200Mi
 
     service:
-      main:
+      app:
         controller: paperless
         ports:
           http:
@@ -71,7 +82,7 @@ spec:
               - path: /
                 pathType: Prefix
                 service:
-                  identifier: paperless
+                  identifier: app
                   port: http
         tls:
           - hosts:
@@ -106,10 +117,3 @@ spec:
         type: nfs
         server: 192.168.1.200
         path: "/srv/nfs/Docs/paperless/export"
-
-    resources:
-      requests:
-        cpu: 10m
-        memory: 1200Mi
-      limits:
-        memory: 1200Mi
