chore(descheduler): reduce cpu requests for plex and prowlarr

--- a/cluster/apps/default/plex/plex-helm-release.yaml
+++ b/cluster/apps/default/plex/plex-helm-release.yaml
@@ -92,7 +92,7 @@ spec:
                     - arm64
     resources:
       requests:
-        cpu: 2
+#        cpu: 2
         memory: 983Mi
       limits:
         memory: 983Mi
