--- a/cluster/apps/networking/external-dns/external-dns-helm-release.yaml
+++ b/cluster/apps/networking/external-dns/external-dns-helm-release.yaml
@@ -19,8 +19,7 @@ spec:
   # https://github.com/bitnami/charts/blob/master/bitnami/external-dns/values.yaml
   values:
     image:
-      registry: k8s.gcr.io
-      repository: external-dns/external-dns
+      repository: registry.k8s.io/external-dns/external-dns
       tag: v0.14.2
     logLevel: debug
     domainFilters:
