--- a/cluster/apps/networking/external-dns/external-dns-helm-release.yaml
+++ b/cluster/apps/networking/external-dns/external-dns-helm-release.yaml
@@ -19,7 +19,8 @@ spec:
   # https://github.com/bitnami/charts/blob/master/bitnami/external-dns/values.yaml
   values:
     image:
-      repository: registry.k8s.io/external-dns/external-dns
+      registry: registry.k8s.io
+      repository: external-dns/external-dns
       tag: v0.14.2
     logLevel: debug
     domainFilters:
