--- a/cluster/apps/default/qbittorent/qbittorent-helm-release.yaml
+++ b/cluster/apps/default/qbittorent/qbittorent-helm-release.yaml
@@ -117,6 +117,11 @@ spec:
       - name: gluetun
         image: qmcgaw/gluetun:v3.38.0
         imagePullPolicy: IfNotPresent
+        securityContext:
+          capabilities:
+            add:
+              - NET_ADMIN
+              - SYS_MODULE
         env:
           - name: VPN_SERVICE_PROVIDER
             value: "custom"
