chore(gluetun): yet another attempt at fixing gluetun

--- a/cluster/apps/default/qbittorent/qbittorent-helm-release.yaml
+++ b/cluster/apps/default/qbittorent/qbittorent-helm-release.yaml
@@ -55,6 +55,7 @@ spec:
         add:
           - NET_ADMIN
           - SYS_MODULE
+          - NET_RAW
     persistence:
       config:
         enabled: true
@@ -117,11 +118,6 @@ spec:
       - name: gluetun
         image: qmcgaw/gluetun:v3.38.0
         imagePullPolicy: IfNotPresent
-        securityContext:
-          capabilities:
-            add:
-              - NET_ADMIN
-              - SYS_MODULE
         env:
           - name: VPN_SERVICE_PROVIDER
             value: "custom"
