--- a/cluster/apps/default/yourls/yourls-helm-release.yaml
+++ b/cluster/apps/default/yourls/yourls-helm-release.yaml
@@ -1,66 +1,66 @@
----
-apiVersion: helm.toolkit.fluxcd.io/v2beta2
-kind: HelmRelease
-metadata:
-  name: yourls
-  namespace: default
-spec:
-  interval: 5m
-  chart:
-    spec:
-      # renovate: registryUrl=https://charts.yourls.org/
-      chart: yourls
-      version: 5.13.0
-      sourceRef:
-        kind: HelmRepository
-        name: yourls-charts
-        namespace: flux-system
-      interval: 5m
-  values:
-    # https://github.com/YOURLS/charts/blob/main/charts/yourls/values.yaml
-    image:
-      registry: ghcr.io
-      repository: yourls/yourls
-      tag: 1.9.2
-
-    replicaCount: 0
-    updateStrategy:
-      type: Recreate
-
-    yourls:
-      domain: "yourls.${SECRET_DOMAIN}"
-      scheme: http
-      existingSecret: yourls-secrets
-
-    ingress:
-      enabled: true
-      ingressClassName: "internal"
-      hostname: "yourls.${SECRET_DOMAIN}"
-      annotations:
-        external-dns/is-public: "false"
-        nginx.ingress.kubernetes.io/connection-proxy-header: "upgrade"
-        nginx.ingress.kubernetes.io/auth-url: "http://oauth2-proxy.networking.svc.cluster.local/oauth2/auth"
-        nginx.ingress.kubernetes.io/auth-signin: "https://auth.${SECRET_DOMAIN}/oauth2/sign_in"
-      tls: true
-
-    service:
-      type: ClusterIP
-      port: 80
-
-    persistence:
-      enabled: true
-      storageClass: longhorn
-      accessModes:
-        - ReadWriteOnce
-      size: 10Gi
-
-    resources:
-      requests:
-        cpu: 10m
-        memory: 100Mi
-      limits:
-        memory: 100Mi
-
+#---
+#apiVersion: helm.toolkit.fluxcd.io/v2beta2
+#kind: HelmRelease
+#metadata:
+#  name: yourls
+#  namespace: default
+#spec:
+#  interval: 5m
+#  chart:
+#    spec:
+#      # renovate: registryUrl=https://charts.yourls.org/
+#      chart: yourls
+#      version: 5.13.0
+#      sourceRef:
+#        kind: HelmRepository
+#        name: yourls-charts
+#        namespace: flux-system
+#      interval: 5m
+#  values:
+#    # https://github.com/YOURLS/charts/blob/main/charts/yourls/values.yaml
+#    image:
+#      registry: ghcr.io
+#      repository: yourls/yourls
+#      tag: 1.9.2
+#
+#    replicaCount: 1
+#    updateStrategy:
+#      type: Recreate
+#
+#    yourls:
+#      domain: "yourls.${SECRET_DOMAIN}"
+#      scheme: http
+#      existingSecret: yourls-secrets
+#
+#    ingress:
+#      enabled: true
+#      ingressClassName: "internal"
+#      hostname: "yourls.${SECRET_DOMAIN}"
+#      annotations:
+#        external-dns/is-public: "false"
+#        nginx.ingress.kubernetes.io/connection-proxy-header: "upgrade"
+#        nginx.ingress.kubernetes.io/auth-url: "http://oauth2-proxy.networking.svc.cluster.local/oauth2/auth"
+#        nginx.ingress.kubernetes.io/auth-signin: "https://auth.${SECRET_DOMAIN}/oauth2/sign_in"
+#      tls: true
+#
+#    service:
+#      type: ClusterIP
+#      port: 80
+#
+#    persistence:
+#      enabled: true
+#      storageClass: longhorn
+#      accessModes:
+#        - ReadWriteOnce
+#      size: 10Gi
+#
+#    resources:
+#      requests:
+#        cpu: 10m
+#        memory: 100Mi
+#      limits:
+#        memory: 100Mi
+#
 #    mariadb:
 #      # https://github.com/bitnami/charts/blob/master/bitnami/mariadb/values.yaml
 #      auth:
