--- a/cluster/apps/networking/nginx/internal.yaml
+++ b/cluster/apps/networking/nginx/internal.yaml
@@ -47,8 +47,8 @@ spec:
         # in conjuction with MetalLB
         externalTrafficPolicy: Local
       config:
-#        custom-http-errors: >-
-#          401,403,404,500,501,502,503
+        #        custom-http-errors: >-
+        #          401,403,404,500,501,502,503
         ssl-protocols: "TLSv1.3 TLSv1.2"
         # Same size defined in cloudflare
         proxy-body-size: "100m"
@@ -57,6 +57,7 @@ spec:
         enable-brotli: "true"
         # enable-ocsp: "true"
         enable-real-ip: "true"
+        use-geoip: "true"
         log-format-escape-json: "true"
         log-format-upstream: '{
           "msec": "$msec",
@@ -110,8 +111,8 @@ spec:
           enabled: true
           namespaceSelector:
             any: true
-#        prometheusRule:
-#          enabled: true
+      #        prometheusRule:
+      #          enabled: true
       # Wildcare certificate, so we don't have to define a certificate for each ingress we create
       extraArgs:
         default-ssl-certificate: "networking/${SECRET_DOMAIN/./-}-tls"
